--- a/Arcgis_ex2/MainPage.xaml
+++ b/Arcgis_ex2/MainPage.xaml
@@ -2,12 +2,31 @@
     x:Class="Arcgis_ex2.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Arcgis_ex2"
+    xmlns:local="using:ArcGISApp._2._27"
     xmlns:esri="using:Esri.ArcGISRuntime.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <esri:MapView Map="{x:Bind ViewModel.Map, Mode=OneWay}" />
+        <!--<Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>-->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <!--<StackPanel Orientation="Vertical" Grid.Column="0"/>-->
+        <StackPanel Orientation="Horizontal" Grid.Row="0">
+            <TextBlock Text="输入所要查询州的名字：" FontSize="16" FontWeight="Bold" Opacity="0.6" RequestedTheme="Default" LineHeight="6" TextAlignment="Start" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FFF50808"/>
+            <TextBox x:Name="querytext" Text="New York" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" FontSize="16" Foreground="#FFE60E0E"/>
+            <Button Content="查询" HorizontalAlignment="Center" VerticalAlignment="Center" Width="72" Margin="0,0,0,0" Click="SearchBtn"/>
+        </StackPanel>
+        <!--<esri:MapView Map="{x:Bind ViewModel.Map, Mode=OneWay}"  Grid.Column="1"/>-->
+        <esri:MapView Map="{x:Bind ViewModel.Map, Mode=OneWay}"  Grid.Row="1" FontSize="10">
+            <esri:MapView.Foreground>
+                <ImageBrush/>
+            </esri:MapView.Foreground>
+        </esri:MapView>
     </Grid>
 </Page>
